--- a/packages/ckeditor5-ckfinder/tests/manual/ckfinder.html
+++ b/packages/ckeditor5-ckfinder/tests/manual/ckfinder.html
@@ -2,7 +2,7 @@
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cksource.com 'unsafe-inline' 'unsafe-eval'">
 </head>
 
-<script src="https://cksource.com/weuy2g4ryt278ywiue/ckfinder.js"></script>
+<script src="https://ckeditor.com/apps/ckfinder/3.4.5/ckfinder.js"></script>
 
 <style>
 	/* Override default test sidebar z-index because CKFinder's modal base z-index is 9000.
