Replace Content-Security-Policy cksource.com address with ckeditor.com.

--- a/packages/ckeditor5-ckfinder/tests/manual/ckfinder.html
+++ b/packages/ckeditor5-ckfinder/tests/manual/ckfinder.html
@@ -1,5 +1,5 @@
 <head>
-	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cksource.com 'unsafe-inline' 'unsafe-eval'">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://ckeditor.com 'unsafe-inline' 'unsafe-eval'">
 </head>
 
 <script src="https://ckeditor.com/apps/ckfinder/3.4.5/ckfinder.js"></script>
