Improve test case examples. Add biding for color name in panel.

--- a/packages/ckeditor5-font/tests/manual/font-color.html
+++ b/packages/ckeditor5-font/tests/manual/font-color.html
@@ -1,8 +1,20 @@
 <div id="editor">
 	<h2>Font Color feature sample.</h2>
-
-	<h3>Color: #9B59B6;</h3>
-	<p>
-		<span style="color:#9B59B6;">Jujubes sweet wafer. Pastry cotton candy sweet muffin dessert cookie. Chocolate cake candy canes dragée wafer donut bear claw.</span>
-	</p>
+	<p><span style="color:gold">color:gold</span></p>
+	<p><span style="color:lightcoral;">color:lightcoral;</span></p>
+	<p><span style="color:#9B59B6;">color:#9B59B6</span></p>
+	<p><span style="color:rgb(248, 77, 77);">color:rgb(248, 77, 77)</span></p>
+	<p><span style="color:rgb(248,180,77);">color:rgb(248,180,77)</span></p>
+	<p><span style="color:rgba(248, 77, 77, 0.8);">color:rgba(248, 77, 77, 0.8)</span></p>
+	<p><span style="color:rgba(248,180,77,0.8);">color:rgba(248,180,77,0.8)</span></p>
+	<p><span style="color:rgba(248, 77, 77, .8);">color:rgba(248, 77, 77, .8)</span></p>
+	<p><span style="color:rgba(248,180,77,.8);">color:rgba(248,180,77,.8)</span></p>
+	<p><span style="color:rgb(10%, 80%, 0%);">color:rgb(10%, 80%, 0%);</span></p>
+	<p><span style="color:rgb(85%,70%,5%);">color:rgb(85%,70%,5%);</span></p>
+	<p><span style="color:rgba(10%, 80%, 0%, 80%);">color:rgba(10%, 80%, 0%, 80%);</span></p>
+	<p><span style="color:rgba(85%,70%,5%,80%);">color:rgba(85%,70%,5%,80%);</span></p>
+	<p><span style="color:hsl(0, 100%, 50%);">color:hsl(0, 100%, 50%);</span></p>
+	<p><span style="color:hsl(50,100%,50%);">color:hsl(50,100%,50%);</span></p>
+	<p><span style="color:hsla(100, 100%, 50%, 80%);">color:hsla(100, 100%, 50%, 80%);</span></p>
+	<p><span style="color:hsla(250,100%,50%,80%);">color:hsla(250,100%,50%,80%);</span></p>
 </div>
