--- a/packages/ckeditor5-remove-format/tests/manual/removeformat.html
+++ b/packages/ckeditor5-remove-format/tests/manual/removeformat.html
@@ -9,6 +9,11 @@
 		.
 	</p>
 
+	<figure class="image">
+		<img src="assets/sample.png" alt="Autumn fields">
+		<figcaption>Autumn <em>fields</em> by Aleksander Nowodzi&#x144;ski</figcaption>
+	</figure>
+
 	<p>
 		What about content that should not be removed? Say <a href="#">Links for example</a>?
 	</p>
