Update manual tests.

--- a/packages/ckeditor5-font/tests/manual/font-color.html
+++ b/packages/ckeditor5-font/tests/manual/font-color.html
@@ -1,20 +1,12 @@
 <div id="editor">
-	<h2>Font Color feature sample.</h2>
-	<p><span style="color:gold">color:gold</span></p>
-	<p><span style="color:lightcoral;">color:lightcoral;</span></p>
-	<p><span style="color:#9B59B6;">color:#9B59B6</span></p>
-	<p><span style="color:rgb(248, 77, 77);">color:rgb(248, 77, 77)</span></p>
-	<p><span style="color:rgb(248,180,77);">color:rgb(248,180,77)</span></p>
-	<p><span style="color:rgba(248, 77, 77, 0.8);">color:rgba(248, 77, 77, 0.8)</span></p>
-	<p><span style="color:rgba(248,180,77,0.8);">color:rgba(248,180,77,0.8)</span></p>
-	<p><span style="color:rgba(248, 77, 77, .8);">color:rgba(248, 77, 77, .8)</span></p>
-	<p><span style="color:rgba(248,180,77,.8);">color:rgba(248,180,77,.8)</span></p>
-	<p><span style="color:rgb(10%, 80%, 0%);">color:rgb(10%, 80%, 0%);</span></p>
-	<p><span style="color:rgb(85%,70%,5%);">color:rgb(85%,70%,5%);</span></p>
-	<p><span style="color:rgba(10%, 80%, 0%, 80%);">color:rgba(10%, 80%, 0%, 80%);</span></p>
-	<p><span style="color:rgba(85%,70%,5%,80%);">color:rgba(85%,70%,5%,80%);</span></p>
-	<p><span style="color:hsl(0, 100%, 50%);">color:hsl(0, 100%, 50%);</span></p>
-	<p><span style="color:hsl(50,100%,50%);">color:hsl(50,100%,50%);</span></p>
-	<p><span style="color:hsla(100, 100%, 50%, 80%);">color:hsla(100, 100%, 50%, 80%);</span></p>
-	<p><span style="color:hsla(250,100%,50%,80%);">color:hsla(250,100%,50%,80%);</span></p>
+	<p><span>01. no-color; no-color</span></p>
+	<p><span style="color:hsl(0, 0%, 100%);background-color:hsl(0, 0%, 0%);">02. color:hsl(0, 0%, 100%);background-color:hsl(0, 0%, 0%);</span></p>
+	<p><span style="color:hsl(0, 75%, 60%);">03. color:hsl(0, 75%, 60%); no-color;</span></p>
+	<p><span style="background-color:hsl(90, 75%, 60%);">04. no-color; background-color:hsl(90, 75%, 60%);</span></p>
+	<p><span style="color:hsl(30, 75%, 60%);background-color:hsl(0, 0%, 30%);">05. color:hsl(30, 75%, 60%); background-color:hsl(0, 0%, 30%);</span></p>
+	<p><span style="color:#00FFFF;background-color:rgb(255, 0, 0);">06. color:#00FFFF;background-color:rgb(255, 0, 0);</span></p>
+	<p><span style="color:hsla( 0, 0%, 0%, .7);background-color:gold;">07. color:hsla( 0, 0%, 0%, .7); background-color:gold;</span></p>
+	<p><span style="color:rgba( 0, 120, 250, 0.8);background-color:hsla(270, 100%, 50%, 0.3);">08. color:;background-color:hsla(270, 100%, 50%, 0.3);</span></p>
+	<p><span style="color:#ddd;background-color:hsl(150, 75%, 60%);">09. color:#ddd;background-color:hsl(150, 75%, 60%);</span></p>
+	<p><span style="color:hsl(270, 75%, 60%);background-color:#d82;">10. color:hsl(270, 75%, 60%);background-color:#d82;</span></p>
 </div>
