Docs: Extended the feature guide. Fixed wording, typos and links in the package. Improved code style.

--- a/packages/ckeditor5-remove-format/tests/manual/removeformat.html
+++ b/packages/ckeditor5-remove-format/tests/manual/removeformat.html
@@ -15,6 +15,6 @@
 	</figure>
 
 	<p>
-		What about content that should not be removed? Say <a href="#">Links for example</a>?
+		<a href="#">Links</a> are not removed.
 	</p>
 </div>
