Tests: Trying to pindown the source of the problem.

--- a/packages/ckeditor5-remove-format/tests/manual/removeformat.html
+++ b/packages/ckeditor5-remove-format/tests/manual/removeformat.html
@@ -1,20 +1,6 @@
 <div id="editor">
 	<p>
-		Paragraph with
-		<strong>bold</strong>
-		,
-		<em>emphasize</em>
-		and some
-		<mark class="pen-red">text marked red</mark>
-		.
+		fo<strong>ob</strong>ar
 	</p>
 
-	<figure class="image">
-		<img src="assets/sample.png" alt="Autumn fields">
-		<figcaption>Autumn <em>fields</em> by Aleksander Nowodzi&#x144;ski</figcaption>
-	</figure>
-
-	<p>
-		<a href="#">Links</a> are not removed.
-	</p>
 </div>
