Update manual test.

--- a/packages/ckeditor5-font/tests/manual/font-color.html
+++ b/packages/ckeditor5-font/tests/manual/font-color.html
@@ -10,3 +10,15 @@
 	<p><span style="color:#ddd;background-color:hsl(150, 75%, 60%);">09. color:#ddd;background-color:hsl(150, 75%, 60%);</span></p>
 	<p><span style="color:hsl(270, 75%, 60%);background-color:#d82;">10. color:hsl(270, 75%, 60%);background-color:#d82;</span></p>
 </div>
+
+<div id="color-box" style="margin-top: 10px;border:1px solid black;padding:5px;">
+	<label>
+		Color:
+		<input type="text" name="color" id="color">
+	</label>
+	<label>
+		Background Color:
+		<input type="text" name="bgcolor" id="bgcolor">
+	</label>
+	<p contenteditable="true"><span>Text for copying.</span></p>
+</div>
