Improve code styling, extract part of the code to separate funciton.

--- a/packages/ckeditor5-font/tests/manual/font-color.html
+++ b/packages/ckeditor5-font/tests/manual/font-color.html
@@ -11,7 +11,7 @@
 	<p><span style="color:hsl(270, 75%, 60%);background-color:#d82;">10. color:hsl(270, 75%, 60%);background-color:#d82;</span></p>
 </div>
 
-<div id="color-box" style="margin-top: 10px;border:1px solid black;padding:5px;">
+<div id="color-box" style="margin-top: 10px; border: 1px solid black; padding: 5px">
 	<label>
 		Color:
 		<input type="text" name="color" id="color">
