Added a custom stack to the ContextualBalloon manual test.

--- a/packages/ckeditor5-ui/tests/manual/contextualballoon/contextualballoon.html
+++ b/packages/ckeditor5-ui/tests/manual/contextualballoon/contextualballoon.html
@@ -20,4 +20,13 @@
 		margin: 5em auto;
 		max-width: 70%;
 	}
+
+	.highlight {
+		background: yellow;
+	}
+
+	.ck p.custom-view {
+		font-size: 14px;
+		padding: 10px 10px 9px;
+	}
 </style>
