--- a/packages/ckeditor5-paste-from-office/tests/_data/spacing/multi-line/normalized.word2016.html
+++ b/packages/ckeditor5-paste-from-office/tests/_data/spacing/multi-line/normalized.word2016.html
@@ -1,9 +1,9 @@
 <p class=MsoNormal style='text-indent:5.25pt'>
-	<span lang=PL style='mso-ansi-language:PL'>2Foo <span style='mso-spacerun:yes'>&nbsp; </span>3Bar4 <span	style='mso-spacerun:yes'>&nbsp; &nbsp;</span><o:p></o:p></span>
+	<span lang=PL style='mso-ansi-language:PL'>2Foo&nbsp;<span style='mso-spacerun:yes'> &nbsp;</span>3Bar4&nbsp;<span	style='mso-spacerun:yes'> &nbsp;&nbsp;</span><o:p></o:p></span>
 </p>
 
 <p class=MsoNormal style='text-indent:5.25pt'>
-	<span lang=PL style='mso-ansi-language:PL'>03<span style='mso-spacerun:yes'>&nbsp; &nbsp;</span><o:p></o:p></span>
+	<span lang=PL style='mso-ansi-language:PL'>03<span style='mso-spacerun:yes'> &nbsp;&nbsp;</span><o:p></o:p></span>
 </p>
 
 <p class=MsoNormal style='text-indent:5.25pt'>
