Internal: added instructions regarding font color manual test utility.

--- a/packages/ckeditor5-font/tests/manual/font-color.html
+++ b/packages/ckeditor5-font/tests/manual/font-color.html
@@ -12,13 +12,14 @@
 </div>
 
 <div id="color-box" style="margin-top: 10px; border: 1px solid black; padding: 5px">
+	<p>You can use this helper to generate text with a particular color / background applied. Change inputs and accept it with enter key.</p>
 	<label>
 		Color:
-		<input type="text" name="color" id="color">
+		<input type="text" name="color" id="color" placeholder="#3d3d3d">
 	</label>
 	<label>
 		Background Color:
-		<input type="text" name="bgcolor" id="bgcolor">
+		<input type="text" name="bgcolor" id="bgcolor" placeholder="pink">
 	</label>
 	<p contenteditable="true"><span>Text for copying.</span></p>
 </div>
