Revert article manual tests html file.

--- a/packages/ckeditor5-core/tests/manual/article.html
+++ b/packages/ckeditor5-core/tests/manual/article.html
@@ -8,7 +8,7 @@
 </head>
 <div id="editor">
 	<h2>Heading 1</h2>
-	<p style="margin-left:2em;">Paragraph</p>
+	<p>Paragraph</p>
 	<p><strong>Bold</strong> <i>Italic</i> <a href="https://ckeditor.com">Link</a></p>
 	<ul>
 		<li>UL List item 1</li>
