--- a/packages/ckeditor5-link/tests/manual/linkdecorator.html
+++ b/packages/ckeditor5-link/tests/manual/linkdecorator.html
@@ -1,6 +1,6 @@
 <h2>Manual decorators</h2>
 <div id="editor">
-	<p>This is <a href="http://ckeditor.com">CKEditor5</a> from <a href="http://cksource.com">CKSource</a>.</p>
+	<p>This is <a href="http://ckeditor.com">CKEditor5</a> from <a href="http://cksource.com" target="_blank" rel="noopener noreferrer">CKSource</a>.</p>
 	<p>This is <a href="//ckeditor.com">CKEditor5</a> as schemaless url.</p>
 	<p>This is <a href="#anchor">anchor</a> on this page.</p>
 	<p>This is some random <a href="ftp://127.0.0.1">ftp address</a>.</p>
