More examples in manual tests.

--- a/packages/ckeditor5-indent/tests/manual/indent-block.html
+++ b/packages/ckeditor5-indent/tests/manual/indent-block.html
@@ -8,7 +8,9 @@
 </head>
 <div id="editor">
 	<h2>Heading 1</h2>
-	<p style="margin-left:1.5em;">Paragraph</p>
+	<p style="margin-left:1.5em;">Paragraph indented 1.5em</p>
+	<p style="margin-left:30px;">Paragraph indented 30px</p>
+	<p style="margin:0 0 0 40px;">Paragraph indented with margin: 0 0 0 40px</p>
 	<p><strong>Bold</strong> <i>Italic</i> <a href="https://ckeditor.com">Link</a></p>
 	<ul>
 		<li>UL List item 1</li>
