--- a/packages/ckeditor5-link/tests/manual/linkdecorator.html
+++ b/packages/ckeditor5-link/tests/manual/linkdecorator.html
@@ -10,7 +10,7 @@
 
 <h2>Automatic decorators</h2>
 <div id="editor2">
-	<p>This is <a href="http://ckeditor.com">CKEditor5</a> from <a href="http://cksource.com">CKSource</a>.</p>
+	<p>This is <a href="http://ckeditor.com" target="_blank" rel="noopener noreferrer" download="download">CKEditor5</a> from <a href="http://cksource.com">CKSource</a>.</p>
 	<p>This is <a href="//ckeditor.com">CKEditor5</a> as schemaless url.</p>
 	<p>This is <a href="#anchor">anchor</a> on this page.</p>
 	<p>This is some random <a href="ftp://127.0.0.1">ftp address</a>.</p>
