Add test for google docs, fix unit test creator to fully simulate clipboard event. Extend unit test with information about data source. Some small docs and test naming improvements.

--- a/packages/ckeditor5-paste-from-office/tests/manual/integration.html
+++ b/packages/ckeditor5-paste-from-office/tests/manual/integration.html
@@ -1,3 +1,8 @@
+<style>
+.clipboard-title {
+	font-size: 1em;
+}
+</style>
 <div id="editor">
 	<h2>Paste here:</h2>
 
@@ -10,11 +15,11 @@
 	</ul>
 </div>
 
-Clipboard HTML
+<h2 class="clipboard-title">Clipboard HTML</h2>
 <div id="html" contenteditable="true" style="width:100%;height:300px;background-color:#EEE;overflow:auto;"></div>
 
-Clipboard text
+<h2 class="clipboard-title">Clipboard text</h2>
 <div id="text" contenteditable="true" style="width:100%;height:100px;background-color:#DDD;overflow:auto;"></div>
 
-Clipboard HTML after transformation
+<h2 class="clipboard-title">Clipboard normalized HTML view after transformation</h2>
 <div id="data" contenteditable="true" style="width:100%;height:100px;background-color:#CCC;overflow:auto;"></div>
