Added manual test with RTL.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -22,3 +22,31 @@
 		accusamus ipsam odio facilis iusto? Explicabo!
 	</p>
 </div>
+
+<br>
+<h2>Editor with RTL</h2>
+
+<div id="editor-rtl">
+	<p>
+		<a id="foo"></a>
+	</p>
+	<p>
+		text<a id="bar"></a>
+	</p>
+	<p>
+		space before <a id="baz"></a>
+	</p>
+	<p>
+		<a id="xyz"></a>text
+	</p>
+	<p>
+		<a id="bookmark_01"></a> space after
+	</p>
+	<p>
+		space before <a id="another_bookmark_name"></a> space after
+	</p>
+	<p>
+		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas mollitia laudantium laboriosam, vitae molestiae velit voluptate aliquid autem nisi minima, quis maiores at iste
+		accusamus ipsam odio facilis iusto? Explicabo!
+	</p>
+</div>
