Conversion - work in progress.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -1,5 +1,21 @@
 <div id="editor">
+	<!-- <p>
+		<a name="wrapped_bookmark_name">Wrapped bookmark with name <i>italic</i> instead of id</a>
+	</p>
 	<p>
+		<a id="foo"></a> point with id
+	</p>
+
+	<p>
+		<a id="bar"></a> point with name
+	</p>
+
+	<p>
+		<a href="#foo">jakistamlink</a>
+	</p> -->
+
+
+	<!-- <p>
 		<a id="foo"></a>
 	</p>
 	<p>
@@ -16,11 +32,53 @@
 	</p>
 	<p>
 		space before <a id="another_bookmark_name"></a> space after
-	</p>
-	<p>
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas mollitia laudantium laboriosam, vitae molestiae velit voluptate aliquid autem nisi minima, quis maiores at iste
-		accusamus ipsam odio facilis iusto? Explicabo!
-	</p>
+	</p> -->
+
+<p>
+	<a name="wrapped_bookmark_name">
+		wrapped
+	</a>
+</p>
+<p>
+	<a id="foo" name="wrapped_bookmark_name">
+		id + name = rozne
+	</a>
+</p>
+<p>
+	<a id="foo" name="foo">
+		id + name = takie same
+	</a>
+</p>
+<p>
+	<a id="foo">
+		sam id
+	</a>
+</p>
+<p>
+	<a name="wrapped_bookmark_name"></a>wrapped
+</p>
+<p>
+	<a id="foo" name="wrapped_bookmark_name"></a>id + name = rozne
+</p>
+<p>
+	<a id="foo" name="foo"></a>id + name = takie same
+</p>
+<p>
+	<a id="foo"></a>sam id
+</p>
+
+	<!-- Lorem ipsum dolor sit amet
+	<a name="wrapped_bookmark_name">
+		consectetur adipisicing elit. Voluptates,
+		<img src="https://ckeditor.com/docs/ckeditor5/latest/assets/img/mario.png">
+		 accusantium!
+	</a>
+
+	 Eaque recusandae fugit illum laudantium. Sequi excepturi aliquid nulla in facilis repellat, autem enim voluptates amet commodi adipisci nobis tempore? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi dolor minus ut? Reiciendis, similique! Recusandae autem nisi necessitatibus amet, quae similique ipsum repellat dolor hic sequi adipisci, dolore, fugit aliquam?</p>
+
+	 <p>
+		test paragraph
+	 </p> -->
 </div>
 
 <br>
