Update manual test.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -1,21 +1,7 @@
+<h2>Editor with enabled wrapped anchors conversion</h2>
 <div id="editor">
-	<!-- <p>
-		<a name="wrapped_bookmark_name">Wrapped bookmark with name <i>italic</i> instead of id</a>
-	</p>
+	<h3>Pointed bookmarks</h3>
 	<p>
-		<a id="foo"></a> point with id
-	</p>
-
-	<p>
-		<a id="bar"></a> point with name
-	</p>
-
-	<p>
-		<a href="#foo">jakistamlink</a>
-	</p> -->
-
-
-	<!-- <p>
 		<a id="foo"></a>
 	</p>
 	<p>
@@ -32,54 +18,226 @@
 	</p>
 	<p>
 		space before <a id="another_bookmark_name"></a> space after
-	</p> -->
+	</p>
 
-<p>
-	<a name="wrapped_bookmark_name">
-		wrapped
-	</a>
-</p>
-<p>
-	<a id="foo" name="wrapped_bookmark_name">
-		id + name = rozne
-	</a>
-</p>
-<p>
-	<a id="foo" name="foo">
-		id + name = takie same
-	</a>
-</p>
-<p>
-	<a id="foo">
-		sam id
-	</a>
-</p>
-<p>
-	<a name="wrapped_bookmark_name"></a>wrapped
-</p>
-<p>
-	<a id="foo" name="wrapped_bookmark_name"></a>id + name = rozne
-</p>
-<p>
-	<a id="foo" name="foo"></a>id + name = takie same
-</p>
-<p>
-	<a id="foo"></a>sam id
-</p>
+	<h3>Wrapped bookmarks</h3>
+	<p>
+		<a name="wrapped_bookmark_name">
+			wrapped with only name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name">
+			wrapped with different id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="foo">
+			wrapped with the same id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo">
+			wrapped only with the id
+		</a>
+	</p>
 
-	<!-- Lorem ipsum dolor sit amet
-	<a name="wrapped_bookmark_name">
-		consectetur adipisicing elit. Voluptates,
-		<img src="https://ckeditor.com/docs/ckeditor5/latest/assets/img/mario.png">
-		 accusantium!
-	</a>
-
-	 Eaque recusandae fugit illum laudantium. Sequi excepturi aliquid nulla in facilis repellat, autem enim voluptates amet commodi adipisci nobis tempore? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi dolor minus ut? Reiciendis, similique! Recusandae autem nisi necessitatibus amet, quae similique ipsum repellat dolor hic sequi adipisci, dolore, fugit aliquam?</p>
-
-	 <p>
-		test paragraph
-	 </p> -->
+	<h3>Pointed bookmarks (contains not only the id attribute)</h3>
+	<p>
+		<a name="wrapped_bookmark_name"></a>pointed with only name
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name"></a>pointed with different id and name
+	</p>
+	<p>
+		<a id="foo" name="foo"></a>pointed with the same id and name
+	</p>
+	<p>
+		<a id="foo"></a>pointed only with the id
+	</p>
 </div>
+
+<br>
+<h2>Editor with disabled wrapped anchors conversion</h2>
+<div id="editor-wrapped-anchors-not-allowed">
+	<h3>Pointed bookmarks</h3>
+	<p>
+		<a id="foo"></a>
+	</p>
+	<p>
+		text<a id="bar"></a>
+	</p>
+	<p>
+		space before <a id="baz"></a>
+	</p>
+	<p>
+		<a id="xyz"></a>text
+	</p>
+	<p>
+		<a id="bookmark_01"></a> space after
+	</p>
+	<p>
+		space before <a id="another_bookmark_name"></a> space after
+	</p>
+
+	<h3>Wrapped bookmarks</h3>
+	<p>
+		<a name="wrapped_bookmark_name">
+			wrapped with only name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name">
+			wrapped with different id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="foo">
+			wrapped with the same id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo">
+			wrapped only with the id
+		</a>
+	</p>
+
+	<h3>Pointed bookmarks (contains not only the id attribute)</h3>
+	<p>
+		<a name="wrapped_bookmark_name"></a>pointed with only name
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name"></a>pointed with different id and name
+	</p>
+	<p>
+		<a id="foo" name="foo"></a>pointed with the same id and name
+	</p>
+	<p>
+		<a id="foo"></a>pointed only with the id
+	</p>
+</div>
+
+<br>
+<h2>Editor (with GHS) with enabled wrapped anchors conversion</h2>
+<div id="editor-with-ghs">
+	<h3>Pointed bookmarks</h3>
+	<p>
+		<a id="foo"></a>
+	</p>
+	<p>
+		text<a id="bar"></a>
+	</p>
+	<p>
+		space before <a id="baz"></a>
+	</p>
+	<p>
+		<a id="xyz"></a>text
+	</p>
+	<p>
+		<a id="bookmark_01"></a> space after
+	</p>
+	<p>
+		space before <a id="another_bookmark_name"></a> space after
+	</p>
+
+	<h3>Wrapped bookmarks</h3>
+	<p>
+		<a name="wrapped_bookmark_name">
+			wrapped with only name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name">
+			wrapped with different id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="foo">
+			wrapped with the same id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo">
+			wrapped only with the id
+		</a>
+	</p>
+
+	<h3>Pointed bookmarks (contains not only the id attribute)</h3>
+	<p>
+		<a name="wrapped_bookmark_name"></a>pointed with only name
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name"></a>pointed with different id and name
+	</p>
+	<p>
+		<a id="foo" name="foo"></a>pointed with the same id and name
+	</p>
+	<p>
+		<a id="foo"></a>pointed only with the id
+	</p>
+</div>
+
+<br>
+<h2>Editor (with GHS) with disabled wrapped anchors conversion</h2>
+<div id="editor-with-ghs-wrapped-anchors-not-allowed">
+	<h3>Pointed bookmarks</h3>
+	<p>
+		<a id="foo"></a>
+	</p>
+	<p>
+		text<a id="bar"></a>
+	</p>
+	<p>
+		space before <a id="baz"></a>
+	</p>
+	<p>
+		<a id="xyz"></a>text
+	</p>
+	<p>
+		<a id="bookmark_01"></a> space after
+	</p>
+	<p>
+		space before <a id="another_bookmark_name"></a> space after
+	</p>
+
+	<h3>Wrapped bookmarks</h3>
+	<p>
+		<a name="wrapped_bookmark_name">
+			wrapped with only name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name">
+			wrapped with different id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo" name="foo">
+			wrapped with the same id and name
+		</a>
+	</p>
+	<p>
+		<a id="foo">
+			wrapped only with the id
+		</a>
+	</p>
+
+	<h3>Pointed bookmarks (contains not only the id attribute)</h3>
+	<p>
+		<a name="wrapped_bookmark_name"></a>pointed with only name
+	</p>
+	<p>
+		<a id="foo" name="wrapped_bookmark_name"></a>pointed with different id and name
+	</p>
+	<p>
+		<a id="foo" name="foo"></a>pointed with the same id and name
+	</p>
+	<p>
+		<a id="foo"></a>pointed only with the id
+	</p>
+</div>
+
+
 
 <br>
 <h2>Editor with RTL</h2>
