Added tests for blockquote.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -20,6 +20,12 @@
 		space before <a id="another_bookmark_name"></a> space after
 	</p>
 
+	<blockquote>
+		<p>
+			<a id="blockquote_with_pointed_bookmark"></a>Blockquote with a bookmark inside
+		</p>
+	</blockquote>
+
 	<h3>Wrapped bookmarks</h3>
 	<p>
 		<a name="wrapped_bookmark_name">
@@ -41,6 +47,11 @@
 			wrapped only with the id
 		</a>
 	</p>
+	<blockquote>
+		<p>
+			<a id="blockquote_with_wrapped_bookmark">Blockquote with a wrapped bookmark inside</a>
+		</p>
+	</blockquote>
 
 	<h3>Pointed bookmarks (contains not only the id attribute)</h3>
 	<p>
