Updated focus handling.

--- a/tests/manual/shadow.html
+++ b/tests/manual/shadow.html
@@ -15,7 +15,7 @@
 	</style>
 </head>
 
-<p><button id="focus-editor">Focus editor component</button></p>
+<p><button id="focus-editor-component">Focus editor component</button></p>
 
 <div id="editor-component"></div>
 
