Change bookmark name preview from button with label.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -1,5 +1,8 @@
 <h2>Editor with enabled wrapped anchors conversion</h2>
 <div id="editor">
+	<p>
+		<a id="very-long-bookmark-name-and-even-longer-than-you-ever-expected"></a> very long bookmark name
+	</p>
 	<h3>Pointed bookmarks</h3>
 	<p>
 		<a id="foo"></a>
