Extended handling of clicking on link when url started with hash.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark-with-output.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark-with-output.html
@@ -21,6 +21,10 @@
 			<a href="#bookmark_for_image">Link to image bookmark.</a>
 		</p>
 
+		<p>
+			<a href="https://ckeditor.com">External link.</a>
+		</p>
+
 		<h2>Example amount of large text</h2>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas mollitia laudantium laboriosam, vitae molestiae velit voluptate aliquid autem nisi minima, quis maiores at iste accusamus ipsam odio facilis iusto? Explicabo!</p>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas mollitia laudantium laboriosam, vitae molestiae velit voluptate aliquid autem nisi minima, quis maiores at iste accusamus ipsam odio facilis iusto? Explicabo!</p>
