Tests: Addressed an issue in the dialog scroll lock test.

--- a/packages/ckeditor5-ui/tests/manual/dialog/dialog-body-scroll-lock.html
+++ b/packages/ckeditor5-ui/tests/manual/dialog/dialog-body-scroll-lock.html
@@ -2,23 +2,23 @@
 	<fieldset>
 		<legend>Is document scrollable?</legend>
 		<div>
-			<input type="radio" id="yes" name="isScrollable" value="yes" />
-			<label for="yes">yes</label>
+			<input type="radio" id="isScrollable-yes" name="isScrollable" value="yes" />
+			<label for="isScrollable-yes">yes</label>
 		</div>
 		<div>
-			<input type="radio" id="no" name="isScrollable" value="no" checked />
-			<label for="no">no</label>
+			<input type="radio" id="isScrollable-no" name="isScrollable" value="no" checked />
+			<label for="isScrollable-no">no</label>
 		</div>
 	</fieldset>
 	<fieldset>
 		<legend>Has &lt;body&gt; position?</legend>
 		<div>
-			<input type="radio" id="yes" name="hasPosition" value="yes" />
-			<label for="yes">yes</label>
+			<input type="radio" id="hasPosition-yes" name="hasPosition" value="yes" />
+			<label for="hasPosition-yes">yes</label>
 		</div>
 		<div>
-			<input type="radio" id="no" name="hasPosition" value="no" checked />
-			<label for="no">no</label>
+			<input type="radio" id="hasPosition-no" name="hasPosition" value="no" checked />
+			<label for="hasPosition-no">no</label>
 		</div>
 	</fieldset>
 </form>
