Added manual test with paste from office and more content in default bookmark test.

--- a/packages/ckeditor5-bookmark/tests/manual/bookmark.html
+++ b/packages/ckeditor5-bookmark/tests/manual/bookmark.html
@@ -69,6 +69,55 @@
 	<p>
 		<a id="foo"></a>pointed only with the id
 	</p>
+
+	<p>Example text at the beginning of the editor content.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,<img
+			src="https://ckeditor.com/docs/ckeditor5/latest/assets/img/mario.png"> accusantium! Eaque recusandae fugit illum
+		laudantium. Sequi excepturi aliquid nulla in facilis repellat, autem enim voluptates amet commodi adipisci nobis
+		tempore? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi dolor minus ut? Reiciendis, similique!
+		Recusandae autem nisi necessitatibus amet, quae similique ipsum repellat dolor hic sequi adipisci, dolore, fugit
+		aliquam?</p>
+	<ul>
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+		<li>Item 4</li>
+	</ul>
+	<figure class="image"><img src="sample.jpg"></figure>
+	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas mollitia laudantium laboriosam, vitae molestiae
+		velit voluptate aliquid autem nisi minima, quis maiores at iste accusamus ipsam odio facilis iusto? Explicabo!</p>
+	<p></p>
+	<figure class="table">
+		<table>
+			<tbody>
+				<tr>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+				</tr>
+				<tr>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+				</tr>
+				<tr>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+				</tr>
+				<tr>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+					<td>Table cell</td>
+				</tr>
+			</tbody>
+		</table>
+	</figure>
+	<p></p>
 </div>
 
 <br>
