Changed emoji library.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -1,3 +1,7 @@
+<head>
+	<meta http-equiv="Content-Security-Policy" content="object-src 'self' blob">
+</head>
+
 <div id="editor">
 	<p>This is <a href="http://ckeditor.com">CKEditor5</a> from <a href="http://cksource.com">CKSource</a>.</p>
 </div>
