Docs: Minor fix.

--- a/scripts/release/assets/zip/index.html
+++ b/scripts/release/assets/zip/index.html
@@ -39,6 +39,7 @@
 
             ClassicEditor
                 .create( document.querySelector( '#editor' ), {
+                    licenseKey: 'GPL', // Or <YOUR_LICENSE_KEY>
                     plugins: [ Essentials, Paragraph, Bold, Italic, Font ],
                     toolbar: [
 						'undo', 'redo', '|', 'bold', 'italic', '|',
