--- a/packages/ckeditor5-link/tests/manual/link.html
+++ b/packages/ckeditor5-link/tests/manual/link.html
@@ -1,3 +1,3 @@
 <div id="editor">
-	<p>This is <a href="http://ckeditor.com">CKEditor5</a> from <a href="http://cksource.com">CKSource</a>.</p>
+	foo<a href="http://ckeditor.com"><strong>textBar</strong></a>baz
 </div>
