Add basic template extendability mechanism.

--- a/packages/ckeditor5-ui-lit-form/tests/manual/litform.html
+++ b/packages/ckeditor5-ui-lit-form/tests/manual/litform.html
@@ -1,3 +1,11 @@
-<div id="editor">
+<h1>Instance 1</h1>
+
+<div id="editor1">
 	Hello world!
+</div>
+
+<h1>Instance 2</h1>
+
+<div id="editor2">
+	Hello editor!
 </div>
