PoC with `emoji-picker-element` package replaced with own implementation.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -1,7 +1,7 @@
 <head>
 	<!-- Required to fetch emoji database from https://cdn.jsdelivr.net -->
 	<meta http-equiv="Content-Security-Policy"
-		content="connect-src 'self' https://cksource.com http://*.cke-cs.com https://cdn.jsdelivr.net/npm/emoji-picker-element-data@%5E1/en/emojibase/data.json;">
+		content="connect-src 'self' https://cksource.com http://*.cke-cs.com https://cdn.ckeditor.com">
 </head>
 
 <div id="editor">
