Replace on tables inline styles responsible for floating into CSS classes.

--- a/packages/ckeditor5-list/tests/manual/list-overlapping.html
+++ b/packages/ckeditor5-list/tests/manual/list-overlapping.html
@@ -1,5 +1,5 @@
 <div id="editor-list-overlapping">
-	<figure class="table" style="float:left;">
+	<figure class="table table-style-align-left">
 		<table>
 			<tbody>
 				<tr>
