PoC of custom auto-complete form for Emoji.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -4,6 +4,11 @@
           content="connect-src 'self' https://cksource.com http://*.cke-cs.com https://cdn.ckeditor.com">
 </head>
 
+<h3><code>EmojiTyping</code></h3>
+<div id="editor-emoji-typing">
+    <p>This is <a href="http://ckeditor.com">CKEditor 5</a> from <a href="http://cksource.com">CKSource</a>.</p>
+</div>
+
 <h3><code>EmojiMention</code> + <code>EmojiPicker</code></h3>
 <div id="editor-emoji-both">
     <p>This is <a href="http://ckeditor.com">CKEditor 5</a> from <a href="http://cksource.com">CKSource</a>.</p>
