Add more sample data.

--- a/packages/ckeditor5-html-support/tests/manual/emptyblock.html
+++ b/packages/ckeditor5-html-support/tests/manual/emptyblock.html
@@ -34,6 +34,21 @@
 			<p></p>
 			<p>&nbsp;</p>
 			<p>Some text</p>
+			<table>
+				<tr>
+					<td>Table cell 1</td>
+					<td>Table cell 2</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
+			<ul>
+				<li>Item 1</li>
+				<li></li>
+				<li>Item 3</li>
+			</ul>
 		</div>
 	</div>
 
@@ -44,6 +59,21 @@
 			<p></p>
 			<p>&nbsp;</p>
 			<p>Another text</p>
+			<table>
+				<tr>
+					<td>Table cell 1</td>
+					<td>Table cell 2</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
+			<ul>
+				<li>Item 1</li>
+				<li></li>
+				<li>Item 3</li>
+			</ul>
 		</div>
 	</div>
 </div>
