Improved a manual test by allowing defining the editor config.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -4,6 +4,24 @@
           content="connect-src 'self' https://cksource.com http://*.cke-cs.com https://cdn.ckeditor.com">
 </head>
 
+<p>
+    <b>Unicode version</b>:
+    <input type="radio" id="unicode-15" name="unicode" value="15"><label for="unicode-15">15</label>
+    <input type="radio" id="unicode-16" name="unicode" value="16"><label for="unicode-16">16</label>
+    <input type="radio" id="unicode-null" name="unicode" value="null" checked><label for="unicode-null">use the plugin default</label>
+</p>
+
+<p>
+    <b>Default skin tone</b>:
+    <input type="radio" id="skin-default" name="skin" value="default"><label for="skin-default">👋</label>
+    <input type="radio" id="skin-light" name="skin" value="light"><label for="skin-light">👋🏻</label>
+    <input type="radio" id="skin-medium-light" name="skin" value="medium-light"><label for="skin-medium-light">👋🏼</label>
+    <input type="radio" id="skin-medium" name="skin" value="medium"><label for="skin-medium">👋🏽</label>
+    <input type="radio" id="skin-medium-dark" name="skin" value="medium-dark"><label for="skin-medium-dark">👋🏾</label>
+    <input type="radio" id="skin-dark" name="skin" value="dark"><label for="skin-dark">👋🏿</label>
+    <input type="radio" id="skin-null" name="skin" value="null" checked><label for="skin-null">use the plugin default</label>
+</p>
+
 <h3><code>EmojiMention</code> + <code>EmojiPicker</code></h3>
 <div id="editor-emoji-both">
     <p>This is <a href="http://ckeditor.com">CKEditor 5</a> from <a href="http://cksource.com">CKSource</a>.</p>
