EmojiMention feed does not return any items when the repository is not loaded correctly.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -9,6 +9,7 @@
     <input type="radio" id="unicode-15" name="unicode" value="15"><label for="unicode-15">15</label>
     <input type="radio" id="unicode-16" name="unicode" value="16"><label for="unicode-16">16</label>
     <input type="radio" id="unicode-null" name="unicode" value="null" checked><label for="unicode-null">use the plugin default</label>
+    <input type="radio" id="unicode-6" name="unicode" value="6"><label for="unicode-6">invalid value</label>
 </p>
 
 <p>
