Add basic GHS plugin implementation.

--- a/packages/ckeditor5-html-support/tests/manual/emailintegration.html
+++ b/packages/ckeditor5-html-support/tests/manual/emailintegration.html
@@ -13,8 +13,8 @@
 
             <figure>
                 <picture>
-                    <source srcset="image.webp" type="image/webp">
-                    <img src="image.jpg" loading="lazy" decoding="async" alt="Modern image element">
+                    <source srcset="sample.webp" type="image/webp">
+                    <img src="sample.jpg" loading="lazy" decoding="async" alt="Modern image element">
                 </picture>
                 <figcaption contenteditable="true">Editable caption</figcaption>
             </figure>
