Adding support for HR in GHS.

--- a/packages/ckeditor5-html-support/tests/manual/ghs-no-features.html
+++ b/packages/ckeditor5-html-support/tests/manual/ghs-no-features.html
@@ -321,6 +321,8 @@
 					<progress id="progress" max="100" value="70"> 70% </progress>
 				</p>
 			</form>
+
+			<hr style="color: red">
 		</div>
 	</div>
 
