--- a/packages/ckeditor5-html-support/tests/manual/ghs-all-features.html
+++ b/packages/ckeditor5-html-support/tests/manual/ghs-all-features.html
@@ -141,6 +141,9 @@
 			<div style="border: 1px solid blue" class="raw-html-embed">HTML snippet</div>
 
 			<div data-foo class="page-break" style="page-break-after:always;"><span style="display:none;">&nbsp;</span></div>
+			<hr style="border: 10px solid red">
+			<hr>
+			<hr style="border-color: blue">
 
 			<p><i class="inline-icon"></i> empty inline at start</p>
 			<p>Text with <i class="inline-icon"></i> empty inline inside</p>
