Add unit tests and manu bar integration.

--- a/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
+++ b/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
@@ -1,6 +1,13 @@
 <div class="dashboard">
-	<p><button id="restart-classic">Restart as Classic editor</button></p>
-	<p><button id="restart-decoupled">Restart as Decoupled editor</button></p>
+	<div>
+		<p><input name="menu-bar" type="checkbox" id="menu-bar"><label for="menu-bar">Show menu bar outside fullscreen</label></p>
+		<p><input name="menu-bar-fullscreen" type="checkbox" id="menu-bar-fullscreen" checked><label for="menu-bar-fullscreen">Show menu bar in fullscreen</label></p>
+	</div>
+	<hr>
+	<div>
+		<p><button id="restart-classic">Restart as Classic editor</button></p>
+		<p><button id="restart-decoupled">Restart as Decoupled editor</button></p>
+	</div>
 </div>
 
 <div class="editor-container">
