Update of the upcast conversion.

--- a/packages/ckeditor5-table/tests/manual/tablelayout.html
+++ b/packages/ckeditor5-table/tests/manual/tablelayout.html
@@ -1,5 +1,67 @@
 <div id="editor">
-	<figure class="table layout-table">
+	<p>Table default: content table</p>
+	<table>
+		<tr>
+			<td>a</td>
+			<td>b</td>
+			<td>c</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+	</table>
+
+	<p>Table with layout-table class: layout table</p>
+	<table class="layout-table">
+		<tr>
+			<td>a</td>
+			<td>b</td>
+			<td>c</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+	</table>
+
+	<p>Figure that contains "table" class with table inside: content table</p>
+	<figure class="table">
+		<table>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
+	</figure>
+
+	<p>Figure that contains "layout-table" class with table inside: layout table</p>
+	<figure class="layout-table">
+		<table>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
+	</figure>
+
+
+	<p>Figure with table default: content table</p>
+	<figure>
 		<table>
 			<thead>
 				<tr>
@@ -40,30 +102,75 @@
 					<td>t</td>
 				</tr>
 			</tbody>
-		</table>
-	</figure>
-
-	<p>Foo bar</p>
-
-	<figure class="table">
-		<table>
-			<tr>
-				<td>a</td>
-				<td>b</td>
-				<td>c</td>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>2</td>
-				<td>3</td>
-			</tr>
 		</table>
 	</figure>
 </div>
 
 <h2>Editor with PlainTableOutput plugin</h2>
 <div id="editor-with-plain-table-output">
-	<figure class="table layout-table">
+<p>Table default: content table</p>
+	<table>
+		<tr>
+			<td>a</td>
+			<td>b</td>
+			<td>c</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+	</table>
+
+	<p>Table with layout-table class: layout table</p>
+	<table class="layout-table">
+		<tr>
+			<td>a</td>
+			<td>b</td>
+			<td>c</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+	</table>
+
+	<p>Figure that contains "table" class with table inside: content table</p>
+	<figure class="table">
+		<table>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
+	</figure>
+
+	<p>Figure that contains "layout-table" class with table inside: layout table</p>
+	<figure class="layout-table">
+		<table>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</table>
+	</figure>
+
+
+	<p>Figure with table default: content table</p>
+	<figure>
 		<table>
 			<thead>
 				<tr>
@@ -104,23 +211,6 @@
 					<td>t</td>
 				</tr>
 			</tbody>
-		</table>
-	</figure>
-
-	<p>Foo bar</p>
-
-	<figure class="table">
-		<table>
-			<tr>
-				<td>a</td>
-				<td>b</td>
-				<td>c</td>
-			</tr>
-			<tr>
-				<td>1</td>
-				<td>2</td>
-				<td>3</td>
-			</tr>
 		</table>
 	</figure>
 </div>
